postgresql-common (139) UNRELEASED-experimental; urgency=low

  * testsuite: unshare needs "--" or else it eats our options.
  * testsute 005_PgCommon: Do the ipv4 tests before the ipv6 ones.

 -- Christoph Berg <myon@debian.org>  Mon, 17 Dec 2012 12:19:31 +0100

postgresql-common (138) experimental; urgency=low

  [ Christoph Berg ]
  * testsuite: start localhost interface which is down after unshare -n.

  [ Martin Pitt ]
  * testsuite: Stop currently running clusters, just as the script has done
    until 136.
  * testsuite: Use a more elegant way of re-execing ourselves through unshare.

 -- Martin Pitt <mpitt@debian.org>  Sun, 16 Dec 2012 18:57:12 +0100

postgresql-common (137) experimental; urgency=low

  [ Martin Pitt ]
  * debian/backport-ppa: Disable xz compression for lucid.
  * debian/backport-ppa: Disable libraries for -9.1/natty as well, built by
    9.2 now.
  * debian/backport-ppa: Ensure that backport PPA versions are always smaller
    than the versions in -updates.
  * pg_wrapper: Always use the latest available client version of "psql"
    instead of the target cluster's. psql is backwards compatible to all major
    versions that we support in any release. Update tests to use "createdb"
    instead of "psql" for --version tests, and add a new test for the psql
    special case to t/020_create_sql_remove.t. (Closes: #639108)
  * debian/postgresql-common.triggers: Also watch for changes in
    /usr/share/hunspell/; pg_updatedicts handles these as well.
    (Closes: #689994)
  * debian/tests/control: Add netcat-openbsd test dependency for the
    next_free_port() tests added below.
  * debian/backport-ppa: Drop natty (EOL), add raring for 9.2.
  * debian/supported-versions: Add Ubuntu 13.04.
  * testsuite: Run with overlaid tmpfses on the postgresql /etc/ and /var
    directories in an unshared namespace. This is more robust against
    protecting existing clusters, always cleans up after itself properly, and
    also speeds up testing.